2009-09-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#141029 A small square-like UI glitch is oberved while opening the
		  conversation by tapping the preview in portrait mode.

	* src/home/hd-render-manager.c (hd_render_manager_allow_dbus_launch_transition):
	  Disallow the appstart transition in portrait mode. The launched
	  application will likely want landscape and we won't be able to
	  finish this transition while rotating.

2009-09-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#140965 The UI blurs and distorts for fraction of time before
		  switching to portrait or landscape mode in Phone app.

	* src/tidy/tidy-cached-group.h (tidy_cached_group_set_downsampling_factor):
	  Make it configurable how large the offscreen buffer should be.
	* src/tidy/tidy-cached-group.c (tidy_cached_group_paint):
	  Take it into account.
	* src/util/hd-transition.c (hd_transition_rotating_fsm):
	  Tell HdRenderManager to render to an fbo with the same size
	  rather than scaling down to 1/4th.

2009-09-29  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#134893 - 'scanning' control panel plugins have negative
	use-time behaviour

	* src/util/hd-transition.c (on_close_timeline_new_frame): Don't do the
	particle animation if the screen is off.
	* src/util/hd-dbus.c (hd_dbus_system_bus_signal_handler): Set Clutter
	to shaped mode when the screen is off. This avoids drawing to screen
	in maemo50 and newer Clutter versions.

2009-09-29  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#140969 - Widgets using CPU after screen blanking
	(is-on-current-desktop property)

	* src/mb/hd-comp-mgr.c
	(hd_comp_mgr_update_applets_on_current_desktop_property): Only set on
	current desktop property for widgets when display is switched on.

	* src/util/hd-dbus.c (hd_dbus_system_bus_signal_handler): Update
	widgets on current desktop property if display switches on/off.

2009-09-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/util/hd-transition.c: